memory-infra: skip IndexedDB file name in BACKGROUND dumps

Strings are not allowed in BACKGROUND dumps and suballocations
are skipped anyways. Omitting it as the code is hitting a DCHECK.

BUG=722052

Review-Url: https://codereview.chromium.org/2880973002
Cr-Commit-Position: refs/heads/master@{#471831}

Former-commit-id: a8b7cbcec01902e7b7f558e4816577e497828c33